# Batates

./: .gitignore  Cargo.toml  README.md  build.sh
src/: animation.rs  camera.rs  dq.rs  main.rs  movement.rs  pet.rs
