[package]
name = "batates"
version = "0.1.2"
edition = "2021"

[package.metadata.bundle]
name = "batates"
identifier = "com.batates.app"
icon = ["assets/icon.ico"]

[dependencies]
device_query = "3.0.1"
bevy = { version = "0.15.0", default-features = false, features = [
  "png",
  "bevy_winit",
  "bevy_sprite",
] }
resolution = "0.2.0"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
opt-level = "z"
panic = "abort"


[profile.dev.package."*"]
opt-level = 3
